--- a/src/DynamicEEBot/DynamicEEBot.csproj
+++ b/src/DynamicEEBot/DynamicEEBot.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="libnoise, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\libnoise.dll</HintPath>
+    </Reference>
     <Reference Include="PlayerIOClient, Version=2.3.6.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\PlayerIOClient.dll</HintPath>
@@ -76,6 +80,15 @@
     <Compile Include="RoomData.cs" />
     <Compile Include="SafeDictionary.cs" />
     <Compile Include="Subbots\Commands.cs" />
+    <Compile Include="Subbots\Dig\BetterMath.cs" />
+    <Compile Include="Subbots\Dig\Dig.cs" />
+    <Compile Include="Subbots\Dig\DigMap.cs" />
+    <Compile Include="Subbots\Dig\Dig_EventHandler.cs" />
+    <Compile Include="Subbots\Dig\Dig_Generator.cs" />
+    <Compile Include="Subbots\Dig\Inventory.cs" />
+    <Compile Include="Subbots\Dig\InventoryItem.cs" />
+    <Compile Include="Subbots\Dig\Pair.cs" />
+    <Compile Include="Subbots\Dig\Shop.cs" />
     <Compile Include="Subbots\PlayerPhysics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
