--- a/src/DynamicEEBot/DynamicEEBot.csproj
+++ b/src/DynamicEEBot/DynamicEEBot.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Subbots\Dig\Inventory.cs" />
     <Compile Include="Subbots\Dig\InventoryItem.cs" />
     <Compile Include="Subbots\Dig\Pair.cs" />
+    <Compile Include="Subbots\Dig\Pickaxe.cs" />
     <Compile Include="Subbots\Dig\Shop.cs" />
     <Compile Include="Subbots\PlayerPhysics.cs" />
     <Compile Include="Program.cs" />
