--- a/src/DynamicEEBot/DynamicEEBot.csproj
+++ b/src/DynamicEEBot/DynamicEEBot.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Block.cs" />
     <Compile Include="BlockPos.cs" />
+    <Compile Include="BotUtility.cs" />
     <Compile Include="Bot\Bot.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
