--- a/src/DynamicEEBot/DynamicEEBot.csproj
+++ b/src/DynamicEEBot/DynamicEEBot.csproj
@@ -102,6 +102,14 @@
     <Compile Include="Subbots\PlayerPhysics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\Destination.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\Door.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\Lamp.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\PowerSources\PowerSource.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\PowerSources\PressurePlate.cs" />
+    <Compile Include="Subbots\Redstone\Redstone.cs" />
+    <Compile Include="Subbots\Redstone\Denstinations\PowerSources\Torch.cs" />
+    <Compile Include="Subbots\Redstone\Wire.cs" />
     <Compile Include="Subbots\Room.cs" />
     <Compile Include="Subbots\SubBot.cs" />
     <Compile Include="Subbots\SubBotHandler.cs" />
@@ -131,6 +139,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
