--- a/src/DynamicEEBot/DynamicEEBot.csproj
+++ b/src/DynamicEEBot/DynamicEEBot.csproj
@@ -58,6 +58,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MdiForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MdiForm.Designer.cs">
+      <DependentUpon>MdiForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Subbots\Room\Block.cs" />
     <Compile Include="Subbots\Room\BlockPos.cs" />
     <Compile Include="BotUtility.cs" />
@@ -123,6 +129,9 @@
     <Compile Include="Subbots\Zombies\Zombie.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MdiForm.resx">
+      <DependentUpon>MdiForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
